# libucl

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  ChangeLog.md  Doxyfile  Makefile  Makefile.am  Makefile.unix  Makefile.w32  README.md  circle.yml  configure.ac  libucl.pc.in
.circleci/: config.yml
.github/workflows/: cmake-multi-platform.yml  makefile.yml
cmake/: CMakeLists.txt
debian/: README.Debian  README.source  changelog  control  copyright  libucl.cron.d.ex  libucl.default.ex  libucl.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
doc/: api.md  libucl.3  lua_api.md
doc/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__emitter.html  group__parser.html  group__structures.html  group__utils.html  index.html  modules.html  structucl__object__s.html  ucl_8h.html  ucl_8h_source.html
include/: lua_ucl.h  ucl++.h  ucl.h
klib/: kvec.h
lua/: Makefile.am  lua_ucl.c  test.lua
m4/: ax_lua.m4  gcov.m4
python/: setup.py  test.sh  test_uclmodule.py
python/src/: uclmodule.c
python/tests/: test_dump.py  test_load.py
src/: Makefile.am  ucl_chartable.h  ucl_emitter.c  ucl_emitter_streamline.c  ucl_emitter_utils.c  ucl_hash.c  ucl_hash.h  ucl_internal.h  ucl_msgpack.c  ucl_parser.c  ucl_schema.c  ucl_sexp.c  ucl_sexp.c.c  ucl_util.c
tests/: 1.in  1.res  2.in  2.res  3.in  3.res  4.in  4.res  6.in  8.in  9.in  CMakeLists.txt  Makefile.am  basic.test  csexp.test  generate.res  generate.test  msgpack.test  msgpack_malformed.test  roundtrip.test  run_tests.sh  schema.test  speed.test  test_basic.c  test_csexp.c  test_generate.c  test_msgpack.c  test_msgpack_malformed.c  test_roundtrip.c  test_schema.c  test_speed.c
tests/basic/: 12.in  12.res  19.in  19.res  23.in  23.res  escapes.in  escapes.res  heredoc_eod.in  heredoc_eod.res  issue312.in  issue312.res  squote.res
tests/fuzzers/: ucl_add_string_fuzzer.c
uthash/: utstring.h
utils/: CMakeLists.txt  Makefile.am  chargen.c  objdump.c  ucl-tool.c  ucl.c
